Function return values.